--- a/e-commerce.html
+++ b/e-commerce.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/makara/style.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
-    <link rel="stylesheet" href="assets/css/theme.css">
+    <link rel="stylesheet" href="assets/css/theme.css" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css"
@@ -19,14 +19,10 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <!-- css -->
     <link rel="stylesheet" href="assets/chhorng/style.css" />
-    
   </head>
   <body>
     <header>
-      <nav
-        class="navbar bg-nav fixed-top navbar-expand-lg border shadow"
-        style="height: 70px"
-      >
+      <nav class="navbar bg-nav fixed-top navbar-expand-lg border shadow">
         <div class="container">
           <a class="navbar-brand" href="index.html">
             <img
@@ -42,7 +38,7 @@
             id="offcanvasNavbar"
             aria-labelledby="offcanvasNavbarLabel"
           >
-            <div class="offcanvas-header bg-nav" style="height: 70px">
+            <div class="offcanvas-header bg-nav">
               <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
                 <a class="navbar-brand d-block" href="index.html">
                   <img
@@ -95,7 +91,7 @@
                       <a class="dropdown-item" href="#">ឯកសារ</a>
                     </li>
                     <li>
-                      <a class="dropdown-item" href="#">វីដេអូ</a>
+                      <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
                   </ul>
                 </li>
@@ -140,7 +136,7 @@
           </div>
           <div class="user-profile d-flex align-items-center">
             <!-- Search Button -->
-            <form class="d-flex d-none d-md-block mx-3" role="search">
+            <form class="d-flex d-none d-md-block me-3" role="search">
               <input
                 class="form-control mx-2"
                 type="search"
@@ -375,11 +371,10 @@
       </section>
 
       <!-- type Plastic -->
-      <section style="margin-top: 80px">
+      <section>
         <div class="container">
           <h3
-            class="fw-bold fs-kp text-center display-5"
-            style="margin-bottom: 100px"
+            class="fw-bold fs-kp text-center display-5 mt-10 mb-6"
             data-aos="fade-left"
           >
             ផលិតផលប្លាស្ទិចកែច្នៃ
@@ -670,11 +665,10 @@
       <!-- end type Plastic-->
 
       <!-- type paper -->
-      <section style="margin-top: 100px">
-        <div class="container">
+      <section>
+        <div class="container mb-5">
           <h3
-            class="fw-bold fs-kp text-center display-5"
-            style="margin-bottom: 100px"
+            class="fw-bold fs-kp text-center display-5 my-8"
             data-aos="fade-left"
           >
             ផលិតផលក្រដាសកែច្នៃ
@@ -962,7 +956,102 @@
       </section>
       <!-- end type papaer -->
     </main>
+    <footer class="bg-footer pt-8 border-top">
+      <div class="container">
+        <div class="row g-4">
+          <div class="col-md-6 col-lg-4">
+            <a
+              href="index.html"
+              class="footer-img mb-3 d-flex align-items-center"
+            >
+              <img
+                src="assets/image/green_leaves_round_logo.png"
+                alt="logo"
+                style="width: 50px"
+              />
+              <h4 class="ms-2 fw-bold text-success mb-0 mt-3">កែច្នៃ</h4>
+            </a>
 
+            <p class="text-secondary">
+              "Your seamless platform for event management, where creativity
+              meets efficiency. We simplify planning, coordinate every detail,
+              and bring your vision to life for unforgettable experiences that
+              inspire."
+            </p>
+          </div>
+
+          <!-- Contact Info -->
+          <div class="col-6 col-md-3 col-lg-4">
+            <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
+              ព័ត៌មានទំនាក់ទំនង
+            </h5>
+            <p class="mb-1">
+              <i class="bi bi-telephone me-2"></i>+855 12 123 456
+            </p>
+            <p class="mb-1">
+              <i class="bi bi-envelope me-2"></i>
+              <a href="mailto:info@gmail.com" class="text-dark"
+                >info@gmail.com</a
+              >
+            </p>
+            <!-- Social Media -->
+            <div class="d-flex gap-3 mt-3">
+              <a href="#" class="text-success"
+                ><i class="bi bi-facebook fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-twitter-x fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-telegram fs-4"></i
+              ></a>
+              <a href="#" class="text-success"
+                ><i class="bi bi-instagram fs-4"></i
+              ></a>
+            </div>
+          </div>
+
+          <!-- Quick Links -->
+          <div class="col-6 col-md-3 col-lg-4">
+            <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
+              តំណភ្ជាប់រហ័ស
+            </h5>
+            <div class="row">
+              <div class="col-6">
+                <ul class="list-unstyled">
+                  <li>
+                    <a href="donation.html" class="footer-link d-block fs-5"
+                      >បរិច្ចាក</a
+                    >
+                  </li>
+                  <li>
+                    <a href="event.html" class="footer-link d-block fs-5"
+                      >ព្រឹត្តិការណ៍</a
+                    >
+                  </li>
+                  <li>
+                    <a href="about.html" class="footer-link d-block fs-5"
+                      >អំពីយើង</a
+                    >
+                  </li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <!-- Bottom bar -->
+        <div class="row border-top py-3 mt-4 align-items-center">
+          <div class="col-6 text-start">
+            <p class="mb-0 small text-secondary">© 2024 Recycle</p>
+          </div>
+          <div class="col-6 d-flex justify-content-end gap-3">
+            <a href="#" class="text-secondary small">Privacy Policy</a>
+            <a href="#" class="text-secondary small">FAQs</a>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/makara/index.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
