--- a/setting.html
+++ b/setting.html
@@ -1,225 +1,283 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="/assets/image/green_leaves_round_logo.png" type="image/x-icon">
-    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-    <link rel="stylesheet" href="assets/css/theme.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.0/css/all.min.css">
+<html lang="km">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Favicon -->
     <link
-        href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@400..700&family=Hanuman:wght@100..900&family=Oswald:wght@200..700&family=Pacifico&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Roboto:ital,wght@0,100..900;1,100..900&family=Sevillana&display=swap"
-        rel="stylesheet">
+      rel="icon"
+      href="assets/image/green_leaves_round_logo.png"
+      type="image/x-icon"
+    />
+
+    <!-- Bootstrap -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+
+    <!-- Bootstrap Icons -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css"
+    />
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+    />
+
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="assets/css/dashboard.css" />
+    <link rel="stylesheet" href="assets/css/theme.css" />
+
     <title>ការកំណត់</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css">
-</head>
-<style>
-    :root {
-        --sidebar-bg: #f8f9fa;
-        --primary-blue: #2196F3;
-        --success-green: #4CAF50;
-        --warning-orange: #FF9800;
-        --danger-red: #F44336;
-        --text-muted: #6c757d;
-    }
-
-    body {
-        background-color: #f5f5f5;
-        font-family: 'Hanuman', sans-serif;
-    }
-
-    .sidebar .nav-link {
-        color: #495057;
-        padding: 12px 20px;
-        border-radius: 0;
-        margin: 2px 8px;
-        transition: all 0.3s ease;
-    }
-
-    .sidebar .nav-link:hover {
-        background-color: #e9ecef;
-        color: var(--primary-blue);
-    }
-
-    .sidebar .nav-link.active {
-        background-color: var(--success-green);
-        color: white;
-    }
-
-    .sidebar .nav-section {
-        font-size: 0.75rem;
-        color: var(--text-muted);
-        text-transform: uppercase;
-        font-weight: 600;
-        padding: 15px 20px 5px;
-        margin-top: 15px;
-    }
-
-    .brand {
-        padding: 20px;
-        border-bottom: 1px solid #e9ecef;
-    }
-
-    .brand h6 {
-        color: var(--success-green);
-        font-weight: 700;
-        margin: 0;
-    }
-
-    .main-content {
-        padding: 20px;
-    }
-
-    .chart-title {
-        font-size: 1.1rem;
-        font-weight: 600;
-        color: #212529;
-    }
-
-    .kpi-value {
-        font-size: 1.5rem;
-        font-weight: 700;
-        color: #212529;
-        margin-bottom: 8px;
-    }
-
-    .week-stats-label {
-        color: var(--text-muted);
-        font-size: 0.9rem;
-        margin-bottom: 16px;
-    }
-
-    .top-bar {
-        background: white;
-        padding: 12px 20px;
-        border-bottom: 1px solid #e9ecef;
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-    }
-
-    .search-box {
-        position: relative;
-        width: 300px;
-    }
-
-    .search-box input {
-        padding-left: 35px;
-        border: 1px solid #e9ecef;
-        border-radius: 6px;
-    }
-
-    .search-box i {
-        position: absolute;
-        left: 12px;
-        top: 50%;
-        transform: translateY(-50%);
-        color: var(--text-muted);
-    }
-
-    .upload-box {
-        cursor: pointer;
-        background-color: #f8f9fa;
-        transition: 0.2s;
-    }
-
-    .upload-box:hover {
-        background-color: #e9ecef;
-    }
-</style>
-
-<body>
+  </head>
+  <body>
     <main>
-        <div class="container-fluid">
-            <div class="row">
-                <!-- Sidebar -->
-                <div class="col-md-3 col-lg-2 sidebar" id="sidebar">
-                    <div class="brand">
-                        <h6><i class="bi bi-box-seam text-success me-2"></i>ផ្ទាំងគ្រប់គ្រង-អ្នកគ្រប់គ្រង</h6>
-                    </div>
+      <div class="container-fluid">
+        <div class="row">
+          <!-- Mobile Toggle -->
+          <div class="d-md-none p-2 bg-white border-bottom">
+            <button
+              class="btn btn-success"
+              type="button"
+              data-bs-toggle="offcanvas"
+              data-bs-target="#sidebarOffcanvas"
+            >
+              <i class="bi bi-list"></i>
+            </button>
+          </div>
 
-                    <div class="nav-section">ទំព័រដើម</div>
-                    <nav class="nav flex-column">
-                        <a class="nav-link  " href="dashboard.html"><i
-                                class="fas fa-tachometer-alt me-2 text-dark"></i>ផ្ទាំងគ្រប់គ្រង</a>
-                    </nav>
-
-                    <nav class="nav flex-column">
-                        <a class="nav-link fw-semibold" href="feedback.html"><i
-                                class="bi bi-chat-left-dots me-2"></i>មតិយោបល់</a>
-                    </nav>
-
-                    <nav class="nav flex-column">
-                        <a class="nav-link fw-semibold" href="#"><i class="bi bi-lock me-2"></i>ចូលប្រើគណនី</a>
-                    </nav>
-
-                    <nav class="nav flex-column">
-                        <a class="nav-link fw-semibold active" href="setting.html"><i
-                                class="bi bi-gear me-2"></i>ការកំណត់</a>
-                    </nav>
-
-                    <nav class="nav flex-column">
-                        <a class="nav-link fw-semibold" href="note-user.html"><i
-                                class="bi bi-journal me-2"></i>ការកត់ត្រា</a>
-                    </nav>
-                </div>
-                <!-- Main Content -->
-                <div class="col-md-9 col-lg-10 p-4">
-                    <div class="card shadow-sm border-0 rounded-4">
-                        <div class="card-body p-4">
-                            <h4 class="mb-4"><i class="bi bi-gear-fill me-2 text-success"></i> ការកំណត់វេបសាយ</h4>
-
-                            <form>
-                                <!-- Website Name -->
-                                <div class="mb-3">
-                                    <label for="siteName" class="form-label">ឈ្មោះវេបសាយ</label>
-                                    <input type="text" id="siteName" class="form-control"
-                                        placeholder="បញ្ចូលឈ្មោះវេបសាយ">
-                                </div>
-
-                                <!-- Logo Upload -->
-                                <div class="mb-3">
-                                    <label for="logoUpload" class="form-label fw-bold">ឡូហ្គោ</label>
-                                    <label for="logoUpload"
-                                        class="upload-box w-100 text-center p-5 border border-2 rounded">
-                                        <i class="bi bi-image fs-1 text-secondary"></i>
-                                        <p class="mt-2 mb-0">ចុចដើម្បីជ្រើសរូបភាព</p>
-                                        <small class="text-muted">PNG, JPG, GIF អតិបរមា 2MB</small>
-                                    </label>
-                                    <input type="file" id="logoUpload" accept="image/*" hidden>
-                                </div>
-
-                                <!-- Hero Banner Upload -->
-                                <div class="mb-3">
-                                    <label for="heroBanner" class="form-label fw-bold">រូបភាព Hero Banner</label>
-                                    <label for="heroBanner"
-                                        class="upload-box w-100 text-center p-5 border  border-2 rounded bg-light">
-                                        <i class="bi bi-image fs-1 text-secondary"></i>
-                                        <p class="mt-2 mb-0">ចុចដើម្បីជ្រើសរូបភាព</p>
-                                        <small class="text-muted">PNG, JPG អតិបរមា 5MB</small>
-                                    </label>
-                                    <input type="file" id="heroBanner" accept="image/*" hidden>
-                                </div>
-
-                                <!-- Save Button -->
-                                <button type="submit" class="btn btn-success"><i
-                                        class="bi bi-save me-2"></i>រក្សាទុកការកំណត់</button>
-                            </form>
-                        </div>
-                    </div>
-                </div>
-
+          <!-- Offcanvas Sidebar -->
+          <div
+            class="offcanvas offcanvas-start sidebar"
+            tabindex="-1"
+            id="sidebarOffcanvas"
+          >
+            <div class="offcanvas-header border-bottom">
+              <h6 class="m-0">
+                <i class="bi bi-box-seam text-success me-1"></i> ផ្ទាំងគ្រប់គ្រង
+              </h6>
+              <button
+                type="button"
+                class="btn-close text-reset"
+                data-bs-dismiss="offcanvas"
+              ></button>
             </div>
+            <div class="offcanvas-body p-0">
+              <nav class="nav flex-column mt-2">
+                <a class="nav-link" href="dashboard.html"
+                  ><i class="fas fa-tachometer-alt me-2"></i> ផ្ទាំងគ្រប់គ្រង</a
+                >
+                <a class="nav-link fw-semibold" href="feedback.html"
+                  ><i class="bi bi-chat-left-dots me-2"></i> មតិយោបល់</a
+                >
+                <a class="nav-link fw-semibold" href="#"
+                  ><i class="bi bi-lock me-2"></i> ចូលប្រើគណនី</a
+                >
+                <a class="nav-link active fw-semibold" href="setting.html"
+                  ><i class="bi bi-gear me-2"></i> ការកំណត់</a
+                >
+                <a class="nav-link fw-semibold" href="note-user.html"
+                  ><i class="bi bi-journal me-2"></i> ការកត់ត្រា</a
+                >
+                <a class="nav-link fw-semibold" href="landing.html"
+                  ><i class="bi bi-box-arrow-in-left me-2"></i> ចាក់ចេញ</a
+                >
+              </nav>
+            </div>
+          </div>
+
+          <!-- Sidebar Desktop -->
+          <div class="col-md-3 col-lg-2 d-none d-md-block sidebar border-end">
+            <div class="brand">
+              <h6>
+                <i class="bi bi-box-seam text-success me-1"></i> ផ្ទាំងគ្រប់គ្រង
+              </h6>
+            </div>
+            <nav class="nav flex-column mt-2">
+              <a class="nav-link" href="dashboard.html"
+                ><i class="fas fa-tachometer-alt me-2"></i> ផ្ទាំងគ្រប់គ្រង</a
+              >
+              <a class="nav-link fw-semibold" href="feedback.html"
+                ><i class="bi bi-chat-left-dots me-2"></i> មតិយោបល់</a
+              >
+              <a class="nav-link fw-semibold" href="#"
+                ><i class="bi bi-lock me-2"></i> ចូលប្រើគណនី</a
+              >
+              <a class="nav-link active fw-semibold" href="setting.html"
+                ><i class="bi bi-gear me-2"></i> ការកំណត់</a
+              >
+              <a class="nav-link fw-semibold" href="note-user.html"
+                ><i class="bi bi-journal me-2"></i> ការកត់ត្រា</a
+              >
+              <a class="nav-link fw-semibold" href="landing.html"
+                ><i class="bi bi-box-arrow-in-left me-2"></i> ចាក់ចេញ</a
+              >
+            </nav>
+          </div>
+
+          <!-- Main Content -->
+          <div class="col-md-9 col-lg-10 py-2">
+            <div class="card border-0">
+              <div class="card-body">
+                <h4 class="mb-4 mt-2">
+                  <i class="bi bi-gear-fill me-2 text-success"></i>
+                  ការកំណត់វេបសាយ
+                </h4>
+
+                <form>
+                  <!-- Website Name -->
+                  <div class="mb-3">
+                    <label for="siteName" class="form-label fw-semibold"
+                      >ឈ្មោះវេបសាយ</label
+                    >
+                    <input
+                      type="text"
+                      id="siteName"
+                      class="form-control"
+                      placeholder="បញ្ចូលឈ្មោះវេបសាយ"
+                      required
+                    />
+                  </div>
+
+                  <!-- Logo Upload -->
+                  <div class="mb-3">
+                    <label for="logoUpload" class="form-label fw-semibold"
+                      >ឡូហ្គោ</label
+                    >
+                    <label
+                      for="logoUpload"
+                      class="upload-box w-100 text-center p-5 border border-2 rounded bg-light"
+                      style="cursor: pointer"
+                    >
+                      <i class="bi bi-image fs-1 text-secondary"></i>
+                      <p class="mt-2 mb-0">ចុចដើម្បីជ្រើសរូបភាព</p>
+                      <small class="text-muted"
+                        >PNG, JPG, GIF អតិបរមា 2MB</small
+                      >
+                    </label>
+                    <input
+                      type="file"
+                      id="logoUpload"
+                      accept="image/*"
+                      hidden
+                    />
+                  </div>
+
+                  <!-- Hero Banner Upload -->
+                  <div class="mb-3">
+                    <label for="heroBanner" class="form-label fw-semibold"
+                      >រូបភាព Hero Banner</label
+                    >
+                    <label
+                      for="heroBanner"
+                      class="upload-box w-100 text-center p-5 border border-2 rounded bg-light"
+                      style="cursor: pointer"
+                    >
+                      <i class="bi bi-image fs-1 text-secondary"></i>
+                      <p class="mt-2 mb-0">ចុចដើម្បីជ្រើសរូបភាព</p>
+                      <small class="text-muted">PNG, JPG អតិបរមា 5MB</small>
+                    </label>
+                    <input
+                      type="file"
+                      id="heroBanner"
+                      accept="image/*"
+                      hidden
+                    />
+                  </div>
+
+                  <!-- 📱 Contact Info -->
+                  <h5 class="mt-4 mb-3 text-success">
+                    <i class="bi bi-telephone-fill me-2"></i> ទំនាក់ទំនង
+                  </h5>
+                  <div class="mb-3">
+                    <label for="phone" class="form-label fw-semibold"
+                      >លេខទូរសព្ទ</label
+                    >
+                    <input
+                      type="tel"
+                      id="phone"
+                      class="form-control"
+                      placeholder="012 345 678"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="email" class="form-label fw-semibold"
+                      >អ៊ីម៉ែល</label
+                    >
+                    <input
+                      type="email"
+                      id="email"
+                      class="form-control"
+                      placeholder="example@email.com"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="address" class="form-label fw-semibold"
+                      >អាសយដ្ឋាន</label
+                    >
+                    <textarea
+                      id="address"
+                      class="form-control"
+                      rows="2"
+                      placeholder="បញ្ចូលអាសយដ្ឋាន"
+                    ></textarea>
+                  </div>
+
+                  <!-- 🔑 Admin Password Change -->
+                  <h5 class="mt-4 mb-3 text-success">
+                    <i class="bi bi-lock-fill me-2"></i> ផ្លាស់ប្តូរពាក្យសម្ងាត់
+                  </h5>
+                  <div class="mb-3">
+                    <label for="currentPassword" class="form-label fw-semibold"
+                      >ពាក្យសម្ងាត់បច្ចុប្បន្ន</label
+                    >
+                    <input
+                      type="password"
+                      id="currentPassword"
+                      class="form-control"
+                      placeholder="បញ្ចូលពាក្យសម្ងាត់ចាស់"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="newPassword" class="form-label fw-semibold"
+                      >ពាក្យសម្ងាត់ថ្មី</label
+                    >
+                    <input
+                      type="password"
+                      id="newPassword"
+                      class="form-control"
+                      placeholder="បញ្ចូលពាក្យសម្ងាត់ថ្មី"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="confirmPassword" class="form-label fw-semibold"
+                      >បញ្ជាក់ពាក្យសម្ងាត់ថ្មី</label
+                    >
+                    <input
+                      type="password"
+                      id="confirmPassword"
+                      class="form-control"
+                      placeholder="វាយពាក្យសម្ងាត់ម្ដងទៀត"
+                    />
+                  </div>
+
+                  <!-- Save Button -->
+                  <button type="submit" class="btn btn-success mt-3">
+                    <i class="bi bi-save me-2"></i> រក្សាទុកការកំណត់
+                  </button>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
-
+      </div>
     </main>
-</body>
 
-<script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
+    <!-- Bootstrap JS -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  </body>
 </html>
