--- a/test.html
+++ b/test.html
@@ -3,12 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>ផ្ទាំងគ្រប់គ្រង - អ្នកគ្រប់គ្រង</title>
     <link
       rel="icon"
-      href="/assets/image/green_leaves_round_logo.png"
+      href="assets/image/green_leaves_round_logo.png"
       type="image/x-icon"
     />
+    <title>ផ្ទាំងគ្រប់គ្រង - អ្នកគ្រប់គ្រង</title>
+
     <!-- Bootstrap -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -32,71 +33,147 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/theme.css" />
     <link rel="stylesheet" href="assets/css/dashboard.css" />
+
+    <style>
+      :root {
+        --sidebar-bg: #f8f9fa;
+        --primary-blue: #2196f3;
+        --success-green: #4caf50;
+        --warning-orange: #ff9800;
+        --danger-red: #f44336;
+        --text-muted: #6c757d;
+      }
+
+      body {
+        background-color: #f5f5f5;
+        font-family: "Hanuman", sans-serif;
+      }
+
+      /* Sidebar */
+      .sidebar {
+        min-height: 50vh;
+        background: var(--sidebar-bg);
+        border-right: 1px solid #e9ecef;
+        padding-top: 10px;
+      }
+
+      .sidebar .brand {
+        padding: 20px;
+        border-bottom: 1px solid #e9ecef;
+      }
+
+      .sidebar .brand h6 {
+        color: var(--success-green);
+        font-weight: 700;
+        margin: 0;
+      }
+
+      .sidebar .nav-link {
+        color: #495057;
+        padding: 12px 20px;
+        margin: 2px 8px;
+        border-radius: 6px;
+        transition: all 0.3s ease;
+      }
+
+      .sidebar .nav-link:hover {
+        background-color: #e9ecef;
+        color: var(--primary-blue);
+      }
+
+      .sidebar .nav-link.active {
+        background-color: var(--success-green);
+        color: white;
+      }
+
+      .sidebar .nav-section {
+        font-size: 0.75rem;
+        color: var(--text-muted);
+        text-transform: uppercase;
+        font-weight: 600;
+        padding: 15px 20px 5px;
+        margin-top: 10px;
+      }
+
+      /* Main Content */
+      .main-content {
+        padding: 20px;
+      }
+
+      /* KPI Cards */
+      .kpi-card {
+        background: white;
+        border-radius: 8px;
+        padding: 20px;
+        border: 1px solid #e9ecef;
+        height: 100%;
+        transition: transform 0.2s ease, box-shadow 0.2s ease;
+      }
+
+      .kpi-card:hover {
+        transform: translateY(-2px);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      }
+
+      .kpi-label {
+        font-size: 0.9rem;
+        font-weight: 600;
+        color: var(--text-muted);
+      }
+
+      .kpi-value {
+        font-size: 1.8rem;
+        font-weight: 700;
+        margin: 5px 0;
+        color: #212529;
+      }
+
+      .kpi-change {
+        font-size: 0.85rem;
+        font-weight: 600;
+      }
+
+      .kpi-change.positive {
+        color: var(--success-green);
+      }
+
+      .kpi-change.negative {
+        color: var(--danger-red);
+      }
+
+      .kpi-change.warning {
+        color: var(--warning-orange);
+      }
+
+      /* Chart Card */
+      .chart-card {
+        background: white;
+        border-radius: 8px;
+        padding: 20px;
+        border: 1px solid #e9ecef;
+        margin-top: 20px;
+      }
+
+      .chart-card h4 {
+        font-weight: 600;
+        margin-bottom: 20px;
+      }
+    </style>
   </head>
 
   <body>
     <div class="container-fluid">
       <div class="row">
-        <!-- Toggle button for mobile -->
-        <div class="d-md-none p-2 bg-white border-bottom">
-          <button
-            class="btn btn-success"
-            type="button"
-            data-bs-toggle="offcanvas"
-            data-bs-target="#sidebarOffcanvas"
-          >
-            <i class="bi bi-list"></i>
-          </button>
-        </div>
-
-        <!-- Offcanvas Sidebar -->
-        <div
-          class="offcanvas offcanvas-start sidebar"
-          tabindex="-1"
-          id="sidebarOffcanvas"
-        >
-          <div class="offcanvas-header border-bottom">
-            <h6 class="m-0">
-              <i class="bi bi-box-seam text-success me-2"></i>ផ្ទាំងគ្រប់គ្រង
-            </h6>
-            <button
-              type="button"
-              class="btn-close text-reset"
-              data-bs-dismiss="offcanvas"
-            ></button>
-          </div>
-          <div class="offcanvas-body p-0">
-            <nav class="nav flex-column mt-2">
-              <a class="nav-link active" href="#"
-                ><i class="fas fa-tachometer-alt me-2"></i> ផ្ទាំងគ្រប់គ្រង</a
-              >
-              <a class="nav-link fw-semibold" href="feedback.html"
-                ><i class="bi bi-chat-left-dots me-2"></i> មតិយោបល់</a
-              >
-              <a class="nav-link fw-semibold" href="#"
-                ><i class="bi bi-lock me-2"></i> ចូលប្រើគណនី</a
-              >
-              <a class="nav-link fw-semibold" href="setting.html"
-                ><i class="bi bi-gear me-2"></i> ការកំណត់</a
-              >
-              <a class="nav-link fw-semibold" href="note-user.html"
-                ><i class="bi bi-journal me-2"></i> ការកត់ត្រា</a
-              >
-              <a class="nav-link fw-semibold" href="landing.html"
-                ><i class="bi bi-box-arrow-in-left me-2"></i> ចាក់ចេញ</a
-              >
-            </nav>
-          </div>
-        </div>
-
-        <!-- Sidebar always visible on md+ -->
-        <div class="col-md-3 col-lg-2 d-none d-md-block sidebar border-end">
+        <!-- Sidebar -->
+        <div class="col-md-3 col-lg-2 sidebar">
           <div class="brand">
             <h6>
               <i class="bi bi-box-seam text-success me-2"></i>ផ្ទាំងគ្រប់គ្រង
             </h6>
           </div>
-          <nav class="nav flex-column mt-2">
+
+          <div class="nav-section">ទំព័រដើម</div>
+          <nav class="nav flex-column">
             <a class="nav-link active" href="#"
               ><i class="fas fa-tachometer-alt me-2"></i> ផ្ទាំងគ្រប់គ្រង</a
             >
@@ -111,9 +188,6 @@
             >
             <a class="nav-link fw-semibold" href="note-user.html"
               ><i class="bi bi-journal me-2"></i> ការកត់ត្រា</a
-            >
-            <a class="nav-link fw-semibold" href="landing.html"
-              ><i class="bi bi-box-arrow-in-left me-2"></i> ចាក់ចេញ</a
             >
           </nav>
         </div>
